chore: analyze OpenJPA 1.0.0 with Sonar